@@ -1,6 +1,7 @@
 v5.8
 -----
 + Added extended options for DLC checkboxes that are accessible by clicking "Options ▾".
++ Added price options to search results pages letting you easily filter results by price
 
 
 v5.7
